-----2.9.0 -----
	* Allow to copy&paste and to duplicate single objects in the project explorer
	* Support Mathieu functions via GSL
	* Added global settings for numbers
	* Support real scientific notation and improve other notations of axes label
	* [spreadsheet]:
		* Allow to freeze the first column
	* [worksheet]:
		* Info Element - a new worksheet element to annotate curve values on the plot
		* Crosshair cursor mode in the plot
		* New themes "Monokai", "ggplot grey", "ggplot dark"
		* New curve symbols "heart" and "lightning"
		* Allow to specify text label's position in logical plot coordinates

-----2.8.2 -----
Bug fixes:
	* [CAS] Fixed the regression introduced after the python2 backend was deprecated in Cantor
	* [worksheet]:
		* DateTime support for Custom Points and for Histograms
		* Fix "power of" notations for negative values, show "0" for zero and improve auto precision for small values for axis labels
		* Show all available symbols styles for CustomPoint, the last one was missing
		* Convert the plot range format to datetime also when the first histogram for datetime data was added to the plot
		* Properly restore the saved values column and also save the values formatting properties in the histogram
		* If the deleted columns are being restored, restore the column pointers also in the histograms
		* Properly react in the histogram when data columns are deleted or renamed
		* Save/load the values format in xy-curve
		* React on text changes for values prefix and suffix and not on return pressed event in the curve properties explorer
		* Fix log scale axis for one tick and ln-scale typo
	* [import]
		* Don't try to parse a netCDF file when the application was compiled without any support for netCDF, and similar for other formats
		* Show the last recently imported projects in a combobox also in ImportProjectDialog similar to how it's already done in ImportFileDialog