@@ -1,8 +1,10 @@
 -----2.9.0 -----
+	* Support multiple plot ranges
 	* Allow to copy&paste and to duplicate single objects in the project explorer
 	* Support Mathieu functions via GSL
 	* Added global settings for numbers
 	* Support real scientific notation and improve other notations of axes label
+	* Improved range auto scaling
 	* [spreadsheet]:
 		* Allow to freeze the first column
 	* [worksheet]:
